--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400,800,600,500,100,200,300' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,7 +56,7 @@
     <div class="container">
       <header>
         <h1>Common<br/>Prayer</h1>
-        <h2> 
+        <h2 class="date"> 
         <script type="text/javascript"> 
 
           //Get the current date 
