--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>Common Prayer | Genesis Toledo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="As a community we long to be shaped and formed in the same direction. One of the ways we pursue this is through praying together. Morning, midday &amp; evening.">
+    <meta name="author" content="Jordan Justice">
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700,900,400,800,600,500,100,200,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:900,200' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
