--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Common Prayer | Genesis Toledo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="As a community we long to be shaped and formed in the same direction. One of the ways we pursue this is through praying together. Morning, midday &amp; evening.">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="author" content="Jordan Justice">
 
     <link href="css/style.css" rel="stylesheet">
