added tomorrow/yesterday/today buttons

--- a/index.html
+++ b/index.html
@@ -199,8 +199,11 @@
 
     </ul>
 
+    <a href="/yesterday" class="btn" style="float:left;">« Yesterday</a>
+    <a href="/tomorrow" class="btn" style="float:right;">Tomorrow »</a>
+
       <footer>
-        <a href="about/" class="circle">?</a>
+        <a href="about/" class="btn" style="clear:both;">?</a>
       </footer>
 
     </div>
