--- a/yesterday/index.html
+++ b/yesterday/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="author" content="Jordan Justice">
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:900,200' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
@@ -17,11 +17,11 @@
     <![endif]-->
 
 
-    <link rel="shortcut icon" href="ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-precomposed.png">
+    <link rel="shortcut icon" href="/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-precomposed.png">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     
@@ -131,7 +131,7 @@
           <a href="#" class="head"><h3>Morning</h3></a>
           <hr>
           <div class="content" id="morning">
-            <img src="img/divider-shadow.png" width="100%">
+            <img src="/img/divider-shadow.png" width="100%">
             <p>O Lord, let my soul rise up to meet you as the day rises to meet the sun.<br />
             Glory to the Father, and to the Son, and to the Holy Spirit,<br />
             as it was in the beginning, is now, and will be forever. Amen.<br /></p>
@@ -147,7 +147,7 @@
             <p>Scripture</p>
 
             <p><em>Prayers for Others & Our Father</em></p>
-            <img src="img/divider-shadow-bottom.png" width="100%">
+            <img src="/img/divider-shadow-bottom.png" width="100%">
           <hr class="bottom">
           </div>
         </li>
@@ -156,7 +156,7 @@
           <a href="#" class="head"><h3>Midday</h3></a>
           <hr>
           <div class="content" id="midday">
-            <img src="img/divider-shadow.png" width="100%">
+            <img src="/img/divider-shadow.png" width="100%">
             <p>Lord, make me an instrument of your peace.<br />
             Where there is hatred, let me sow love;<br />
             where there is injury, pardon;<br />
@@ -175,7 +175,7 @@
             as it was in the beginning, is now, and will be forever. Amen.<br /></p>
 
             <p><em>Prayers for Others &  Great Commandment</em></p>
-            <img src="img/divider-shadow-bottom.png" width="100%">
+            <img src="/img/divider-shadow-bottom.png" width="100%">
           <hr class="bottom">
           </div>
         </li>
@@ -184,7 +184,7 @@
           <a href="#" class="head"><h3>Evening</h3></a>
           <hr>
           <div class="content" id="evening">
-            <img src="img/divider-shadow.png" width="100%">
+            <img src="/img/divider-shadow.png" width="100%">
             <p>Lord Jesus, stay with us, for the evening is at hand and the day is past.</p> 
 
             <p>Be our constant companion on the way, kindle our hearts, and awaken hope among us, that we may recognize You as You are revealed in the scriptures and in the breaking of bread.</p>
@@ -192,15 +192,17 @@
             <p>I thank You, Heavenly Father, that you have graciously kept me this day; and I pray that You would forgive me all my sins where I have done wrong, and graciously keep me this night.</p>
 
             <p>For into Your hands I commend myself, my body and soul, and all things. Let Your Holy Spirit be with me, that the evil foe may have no power over me. Amen. </p>
-            <img src="img/divider-shadow-bottom.png" width="100%">
+            <img src="/img/divider-shadow-bottom.png" width="100%">
           <hr class="bottom">
           </div>
         </li>
 
     </ul>
 
+    <a href="/" class="btn" style="float:right;">Today »</a>
+
       <footer>
-        <a href="about/" class="circle">?</a>
+        <a href="/about/" class="btn" style="clear:both;">?</a>
       </footer>
 
     </div>
