fixed tomorrow bug

--- a/tomorrow/index.html
+++ b/tomorrow/index.html
@@ -96,7 +96,7 @@
 
           //Get the current date 
           var today = new Date(); 
-          var day = today.getDay() - 1; 
+          var day = today.getDay() + 1; 
 
          
           if (day == "0") { 
